--- a/index.html
+++ b/index.html
@@ -20,22 +20,27 @@
             </div>
             <ul class="sidebar-menu">
                 <li class="menu-item active" data-target="input-screen"><a href="#"><i class="fas fa-home"></i> Início</a></li>
-                <li class="menu-item" data-target="readme-screen"><a href="#"><i class="fas fa-file-alt"></i> README Gerado</a></li>
+                <li class="menu-item" data-target="readme-screen"><a href="#"><i class="fas fa-file-alt"></i> AutoDoc.md</a></li>
                 <li class="menu-item" data-target="bugs-screen"><a href="#"><i class="fas fa-bug"></i> Análise de Bugs</a></li>
+                <li class="menu-item" data-target="complexity-screen"><a href="#"><i class="fas fa-calculator"></i> Análise de Complexidade</a></li>
             </ul>
         </nav>
 
         <main class="main-content">
             <section id="input-screen" class="screen">
                 <div class="card">
-                    <h1>Documentação README, simplificada.</h1>
-                    <p>Cansado de READMEs desatualizados ou confusos? A DocSync AI analisa seu código e gera uma documentação clara e organizada, para que novos desenvolvedores entendam seu projeto em minutos.</p>
+                    <h1>Documentação Inteligente a partir dos seus Commits</h1>
+                    <p>A DocSync AI analisa o histórico de commits do seu repositório para entender a evolução do projeto e gerar um README que reflete verdadeiramente suas funcionalidades.</p>
                     <div class="input-group">
                         <i class="fab fa-github"></i>
                         <input type="text" id="repo-url" placeholder="Cole a URL do seu repositório GitHub aqui">
                     </div>
-                    <button id="analyze-btn">
-                        <span class="btn-text">Gerar Documentação README</span>
+                    <div class="consent-group">
+                        <input type="checkbox" id="consent-checkbox">
+                        <label for="consent-checkbox">Eu entendo que o código e os commits do meu repositório serão analisados apenas para fins de leitura e não serão armazenados.</label>
+                    </div>
+                    <button id="analyze-btn" disabled>
+                        <span class="btn-text">Analisar Commits e Gerar README</span>
                         <div class="spinner hidden"></div>
                     </button>
                 </div>
@@ -65,6 +70,41 @@
                 </div>
             </section>
 
+            <section id="complexity-screen" class="screen hidden">
+                <header class="results-header">
+                    <h2>Análise de Complexidade Algorítmica com IA</h2>
+                </header>
+                <p class="section-description">Cole seu código abaixo e descubra sua complexidade computacional estimada, além de dicas de otimização baseadas em análise de IA.</p>
+                <div class="complexity-analyzer">
+                    <div class="code-editor-container">
+                        <div class="editor-header">
+                            <select id="language-selector">
+                                <option value="javascript">JavaScript</option>
+                                <option value="python">Python</option>
+                                <option value="java">Java</option>
+                            </select>
+                        </div>
+                        <textarea id="code-input" placeholder="Cole seu código aqui..."></textarea>
+                        <button id="analyze-complexity-btn">
+                            <span class="btn-text">Analisar Complexidade</span>
+                            <div class="spinner hidden"></div>
+                        </button>
+                    </div>
+                    <div id="complexity-results-container" class="complexity-results hidden">
+                        <h3>Resultado da Análise</h3>
+                        <div id="complexity-overall" class="complexity-badge"></div>
+                        <div class="result-section">
+                            <h4><i class="fas fa-search"></i> Gargalos Detectados</h4>
+                            <ul id="complexity-bottlenecks"></ul>
+                        </div>
+                        <div class="result-section">
+                            <h4><i class="fas fa-lightbulb"></i> Sugestões de Otimização</h4>
+                            <ul id="complexity-suggestions"></ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
         </main>
     </div>
 
@@ -87,6 +127,8 @@
                     <h4>Depois</h4>
                     <pre id="modal-code-after"></pre>
                 </div>
+            </div>
+            <div id="modal-details" class="modal-details">
             </div>
         </div>
     </div>
